--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -17,9 +17,9 @@
     <h1>Olá, mundo!</h1>
     
     <script>
-        window.alert('Minha primeira mensagem')
-        window.confirm('Está gostando de JS?')
-        window.prompt('Qual é o seu nome?')
+        window.alert('Minha primeira mensagem') // Janela de alerta.
+        window.confirm('Está gostando de JS?') // Janela com botão Ok e cancelar.
+        window.prompt('Qual é o seu nome?') // Vai perguntar o nome.
     </script>
 </body>
 </html>
